# try-lambda-adapter

./: README.md  untitled.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.bash
sam-app/: README.md  pyproject.toml  template.yaml
sam-app/.aws-sam/: build.toml
sam-app/hello_world/: Dockerfile
sample-dash/: README.md  pyproject.toml
sample-dash/src/sample_dash/: Dockerfile  app.py
sample-flask/: README.md  template.yaml
sample-flask/.aws-sam/: build.toml
sample-flask/app/: Dockerfile  app.py  requirements.txt
sample-sam/: README.md  samconfig.toml  template.yaml
sample-sam/.aws-sam/: build.toml
